# invoice-extraction-system

./: .env.example  APPROACH.md  LICENSE  README.md  main.py  pyproject.toml
design/: architecture.md  diagrams.md  extractor_activity_diagram.mmd  extractor_sequence_diagram.mmd  ingestion_service_activity_diagram.mmd  ingestion_service_sequence_diagram.mmd  parser_decision.md  query_analyzer.mmd  retrieval_service_activity_diagram.mmd  use_case_diagram.mmd
src/: command_invoice_repository.py  embedder.py  env_settings.py  extracted_schemas.py  ingestion_service.py  invoice_extractor.py  invoice_parser.py  models.py  prompts.py  utils.py
src/cli/: formatter.py  request_context.py  router.py
src/core/: config.py  extensive_schemas.py  models.py  prompts.py  utils.py
src/ingestion/: command_invoice_repository.py  extracted_schemas.py  ingestion_service.py  invoice_extractor.py  invoice_parser.py
src/retrieval/: answer_generator.py  exceptions.py  query_invoice_repository.py  query_router.py  query_translator.py  retrieval_service.py  tools.py
tests/: test_invoice_processing.py
tests/results/: invoice-1-3_result_20260103_185011.json  invoice-1-3_result_20260105_124656.json  invoice-1-3_result_20260105_124656.pkl  salesinvoice2_result_20260103_184832.json  salesinvoice2_result_20260105_125155.json  salesinvoice2_result_20260105_125155.pkl
tests/retrieval/: test_query_invoice_repository.py
